/*
 * Copyright (C) 2013  Ohm Data
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

package c5db.election;

option java_package = "c5db.discovery.generated";

option optimize_for = SPEED;

import "control_messages.proto";

// An availability broadcast
message Availability {
    // ID identification for this node.
    optional int64 node_id = 1;

    // Network port it is reachable on
    optional int32 base_network_port = 2;

    // The network addresses we can be reached at
    repeated string addresses = 3;

    // The modules this node is running and the ports they're running on.
    repeated ModuleDescriptor modules = 4;
}

// Module name to module port mapping.
message ModuleDescriptor {
    optional c5db.messages.ModuleType module = 1;
    optional uint32 module_port = 2;
}
